added proguard rules unit tests now passing